# SPDZ-2-Extension-MpcHonestMajority

./: .gitignore  CMakeLists.txt  LICENSE  Mersenne127.cpp  Mersenne127.h  README.md  spdz2_ext_processor_base.cpp  spdz2_ext_processor_base.h  spdz2_ext_processor_gf2n.cpp  spdz2_ext_processor_gf2n.h  spdz2_ext_processor_mersenne127.cpp  spdz2_ext_processor_mersenne127.h  spdz2_ext_processor_mersenne61.cpp  spdz2_ext_processor_mersenne61.h  spdz_ext_dox_cfg  spdz_ext_processor.cpp  spdz_ext_processor.h  spdzext.cpp  spdzext.h  spdzext_width_defs.h
